added emails url to admin page

--- a/templates/adminviews/index.html
+++ b/templates/adminviews/index.html
@@ -5,6 +5,7 @@
 
  <ul>
      <li><a href="/admin/view/urls">View and add urls</a></li>
+     <li><a href="/admin/view/emails">View and add emails</a></li>
  </ul>
 
  </body>
