Added category onto the feeds

--- a/templates/webviews/front.html
+++ b/templates/webviews/front.html
@@ -23,7 +23,8 @@
                          {% for article in articles %}
                       <tr>
                          <td class="rank">{{article.position}}</td>
-                         <td class="headline"><a href="{{article.url}}" title="{{article.title}}">{{article.title}}</a></td> 
+                         <td class="headline"><a href="{{article.url}}" title="{{article.title}}">{{article.title}}</a></td>
+                         <td><a href="{{article.feed_url}}">{{article.category}}</a></td>
                          <td class="since">{{article.created_at|date:"g:iA"}}</td>
                       </tr>
                          {% endfor %}
@@ -33,7 +34,8 @@
                     <thead>
 
                          <th class="rank">rank</th>
-                         <th class="headline">headline</th> 
+                         <th class="headline">headline</th>
+                         <th class="headline">category</th>
                          <th class="since">alive since</th>
 
 
