--- a/templates/webviews/jsonfeed.html
+++ b/templates/webviews/jsonfeed.html
@@ -6,7 +6,8 @@ article_data(
 	{
 		"url": "{{item.url}}",
 		"position": "{{item.position}}",
-		"title": "{{item.title}}"
+		"title": "{{item.title}}",
+        "category": "{{item.category}}"
 	  }
 	{% if not forloop.last %} , {% endif %}
 	{% endfor %}
