--- a/templates/webviews/jsonfeed.html
+++ b/templates/webviews/jsonfeed.html
@@ -6,7 +6,8 @@
 		"url": "{{item.url}}",
 		"position": "{{item.position}}",
 		"title": "{{item.title}}",
-        "category": "{{item.category}}",
+		"category": "{{item.category}}",
+        "feed_url": "{{item.feed_url}}",
         "created_at": "{{item.created_at|date:"g:iA"}}"
 	  }
 	{% if not forloop.last %} , {% endif %}
