Changed json feed url

--- a/templates/webviews/front.html
+++ b/templates/webviews/front.html
@@ -14,7 +14,7 @@
         $(document).ready(function(){
               var currentNotifications = [];
               var notifications = {};
-              var url = "http://localhost:8080/data.json";
+              var url = "http://news-alertomatic.appspot.com/data.json";
               var timer; 
               
               function checkCurrentNotifications() {
