added subrank and url from the description of the article

--- a/templates/webviews/front.html
+++ b/templates/webviews/front.html
@@ -11,35 +11,7 @@
    
         <link type="text/css" rel="stylesheet" href="/static/styles.css">
 
-        <script>
-          $(document).ready(function(){
-               //initialise with those already on the page
-
-               function initialiseNotifications(){
-
-                    $.each($('.headline a'), function(){
-                        currentNotifications.push($(this).attr('href'));
-                    });
-                    $('tbody').html();
-                    fetchData();
-               }
-
-               initialiseNotifications();
-               checkFeed();
-
-               $('#start').click(function(event) {
-                   event.stopPropagation();
-                   startNotify();
-               });
-
-               $('#stop').click(function(event) {
-                   event.stopPropagation();
-                   stopNotify();
-               });
-
-           });
-                  
-        </script>
+ 
     </head>
     <body>
     <div class="dashboard">
@@ -56,9 +28,9 @@
                     <tbody>
                          {% for article in articles %}
                       <tr>
-                         <td class="rank">{{article.position}}</td>
-                         <td class="headline"><a href="{{article.url}}" title="{{article.title}}">{{article.title}}</a></td> 
-                         <td class="category"><a href="{{article.feed_url}}" title="{{article.category}}">{{article.category}}</a></td> 
+                         <td class="rank">{{article.position}}.{{article.sub_position}}</td>
+                         <td class="headline"><a href="{{article.url}}" title="{{article.title}}">{{article.title}}</a></td>
+                         <td class="category"><a href="{{article.feed_url}}" title="{{article.category}}">{{article.category}}</a></td>
                          <td class="since">{{article.created_at|date:"g:iA"}}</td>
                       </tr>
                          {% endfor %}
@@ -68,8 +40,8 @@
                     <thead>
 
                          <th class="rank">rank</th>
-                         <th class="headline">headline</th> 
-                         <th class="category">category</th> 
+                         <th class="headline">headline</th>
+                         <th class="category">category</th>
                          <th class="since">alive since</th>
 
 
