--- a/templates/webviews/jsonfeed.html
+++ b/templates/webviews/jsonfeed.html
@@ -5,6 +5,7 @@
 	{
 		"url": "{{item.url}}",
 		"position": "{{item.position}}",
+        "subposition": "{{item.sub_position}}",
 		"title": "{{item.title}}",
 		"category": "{{item.category}}",
         "feed_url": "{{item.feed_url}}",
